# EHNS-SCE

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/models/: database.py
backend/app/routes/: analysis.py
backend/app/schemas/: analysis_schema.py
backend/app/services/: entropy.py  file_analyzer.py  hashing.py
backend/tests/: test_analysis.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/components/: EntropyChart.tsx  FileUpload.tsx  HashDisplay.tsx  IndicatorsList.tsx  RiskBadge.tsx
frontend/src/lib/: api.ts
frontend/src/types/: analysis.ts
